errorHandling in admissibility processor